# kospi200-parser

./: .gitignore  Cargo.lock.MSRV  Cargo.toml  README.md  codecov.yml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: README.md  kospi.rs
data/: test-small.sorted  test-small.unsorted
src/: kospi.rs  lib.rs  main.rs  quote_parser.rs  sources.rs
tests/: kospi_test.rs  main_test.rs  quote-parser-test.rs  sources_test.rs
