[package]
name = "kospi200-feed-handler"
version = "0.1.0"
edition = "2024"
authors = ["Carlo Bortolan <carlobortolan@gmail.com>"]
description = " Zero-allocation PCAP quote parser for Kospi 200 market data feeds."
license = "MIT OR Apache-2.0"
keywords = ["pcap", "kospi200", "hft", "udp", "trading"]
categories = ["finance", "network-programming", "parser-implementations", "simulation"]
repository = "https://github.com/carlobortolan/kospi200-feed-handler"
documentation = "https://docs.rs/kospi200-feed-handler"
homepage = "https://github.com/carlobortolan/kospi200-feed-handler"

include = ["LICENSE-MIT.md", "LICENSE-APACHE.md", "src/", "tests/"]

# When changing MSRV: Also update the README
rust-version = "1.85.0"

[[bin]]
name = "parse-quote"
path = "src/main.rs"

[dependencies]
memmap2 = "0.9"
itoa = "1.0"

[lints.rust.unexpected_cfgs]
level = "warn"
# Set by cargo-llvm-cov when running on nightly
check-cfg = ['cfg(coverage_nightly)']

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
